Add filters and stable ordering to list projects API
